# loto

./: .gitignore  Cargo.toml  input_megasena_exemplo.txt  readme.md
src/: cli_builder.rs  cli_derive.rs  client.rs  commands.rs  data.rs  file.rs  lib.rs  main.rs  parsers.rs  sys_tmp.rs  util.rs
src/deprecated/: file.rs  mod.rs
