[package]
name = "loto"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
atty = "0.2.14"
clap = { version = "4.5.21", features = ["derive"] }
colored = "2.1.0"
# indicatif = "0.17.9"
# derive_more = { version = "1.0.0", features = ["display"] }
minreq = { version = "2.12.0", features = ["https"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
strum = { version = "0.26.3", features = ["derive"] }
